# libvisio

./: .gitignore  .gitreview  AUTHORS  HACKING  Makefile.am  NEWS  README  astyle.options  autogen.sh  buildnumber.sh  configure.ac  configure.in  createBuildNumber.pl  groups  libvisio-0.0.pc.in  libvisio-0.1.pc.in  libvisio-zip.in  libvisio.pc.in  libvisio.spec.in  project.config
.git-hooks/: README
docs/: Makefile.am
docs/doxygen/: Makefile.am  doxygen.cfg  footer.html.in  header.html.in
inc/: Makefile.am
inc/libvisio/: Makefile.am  VisioDocument.h  libvisio.h
m4/: ax_cxx_compile_stdcxx.m4
src/: Makefile.am
src/conv/: Makefile.am
src/conv/raw/: .gitignore  Makefile.am  vsd2raw.cpp  vsd2raw.rc.in  vss2raw.cpp  vss2raw.rc.in
src/conv/svg/: .gitignore  Makefile.am  vsd2svg.cpp  vsd2svg.rc.in  vsd2xhtml.cpp  vsd2xhtml.rc.in  vss2xhtml.cpp  vss2xhtml.rc.in
src/conv/text/: .gitignore  Makefile.am  vsd2text.cpp  vsd2text.rc.in  vss2text.cpp  vss2text.rc.in
src/fuzz/: .gitignore  Makefile.am  vdx.dict  vsdfuzzer.cpp  vsdx.dict
src/lib/: .gitignore  Makefile.am  VDXParser.cpp  VDXParser.h  VSD11Parser.cpp  VSD11Parser.h  VSD2Parser.cpp  VSD2Parser.h  VSD5Parser.cpp  VSD5Parser.h  VSD6Parser.cpp  VSD6Parser.h  VSDCharacterList.cpp  VSDCharacterList.h  VSDCollector.h  VSDContentCollector.cpp  VSDContentCollector.h  VSDDocumentStructure.h  VSDFieldList.cpp  VSDFieldList.h  VSDGeometryList.cpp  VSDGeometryList.h  VSDInternalStream.cpp  VSDInternalStream.h  VSDLayerList.cpp  VSDLayerList.h  VSDMetaData.cpp  VSDMetaData.h  VSDOutputElementList.cpp  VSDOutputElementList.h  VSDPages.cpp  VSDPages.h  VSDParagraphList.cpp  VSDParagraphList.h  VSDParser.cpp  VSDParser.h  VSDSVGGenerator.cpp  VSDSVGGenerator.h  VSDShapeList.cpp  VSDShapeList.h  (+66 more)
src/lib/preprocess/: SvgDC.cpp  SvgDC.h  SvgFont.cpp  SvgFont.h  SvgParagraph.cpp  SvgParagraph.h  SvgSpan.cpp  SvgSpan.h  SvgTextObject.cpp  SvgTextObject.h  SvgUtils.cpp  SvgUtils.h  VsdElementListPreprocessor.cpp  VsdElementListPreprocessor.h
src/lib/preprocess/windows/: WindowsSvgDC.cpp  WindowsSvgDC.h  WindowsSvgFont.cpp  WindowsSvgFont.h
src/test/: .gitignore  Makefile.am  VSDInternalStreamTest.cpp  VSDXMLHelperTest.cpp  importtest.cpp  test.cpp  xmldrawinggenerator.cpp  xmldrawinggenerator.h
src/test/data/: Visio11FormatLine.vsd  Visio11PlanWithDimensions.vsd  Visio11TextFieldsWithAngle.vsd  Visio11TextFieldsWithCurrency.vsd  Visio11TextFieldsWithUnits.vsd  Visio15ShapeGrouped.vsdx  Visio5PlanWithDimensions.vsd  Visio5PlanWithDimensions.wmf  Visio5TextFieldsWithUnits.vsd  Visio6PlanWithDimensions.vsd  Visio6PlanWithDimensions.wmf  Visio6TextFieldsWithUnits.vsd  bgcolor.vsdx  bitmaps.vsd  bitmaps2.vsd  blue-box.vsdx  color-boxes.vsdx  dwg.vsd  dwg.vsdx  fdo86664.vsdx  fdo86729-ms1252.vsd  fdo86729-utf8.vsd  no-bgcolor.vsd  office_varient4.vsdx  qs-box.vsdx  recursion-cycle.vsdx  tab-short-prefix.vsdx  tdf136564-WhiteTextBackground.vsdx  tdf154379-DrawingUnits-type.vsd  tdf154379-QuickStyleFillMatrix.vsdx  tdf76829-datetime-format.vsd  tdf76829-numeric-format.vsd  testfile1.vsdx  testfile3.vsdx  testfile4.vsdx  testfile5.vsdx  testfile6.vsdx
